--- a/ProtoEngine/ProtoEngine.csproj
+++ b/ProtoEngine/ProtoEngine.csproj
@@ -41,16 +41,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Device.cs" />
-    <Compile Include="DeviceFactory.cs" />
+    <Compile Include="DevicePrototype.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Option.cs" />
     <Compile Include="OptionBool.cs" />
+    <Compile Include="OptionInt.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProtoType.cs" />
+    <Compile Include="RuleField.cs" />
+    <Compile Include="TransactionalStreamReader.cs" />
+    <Compile Include="Rule.cs" />
+    <Compile Include="Transaction.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Modbus-serial.xml" />
+    <Content Include="Modbus-serial.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
