--- a/ProtoEngine/ProtoEngine.csproj
+++ b/ProtoEngine/ProtoEngine.csproj
@@ -40,9 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConstantExpression.cs" />
     <Compile Include="Device.cs" />
     <Compile Include="DevicePrototype.cs" />
     <Compile Include="EmptyRule.cs" />
+    <Compile Include="Expression.cs" />
+    <Compile Include="FunctionCallExpression.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Option.cs" />
     <Compile Include="OptionArray.cs" />
@@ -50,10 +53,12 @@
     <Compile Include="OptionInt.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RuleBlock.cs" />
     <Compile Include="RuleField.cs" />
     <Compile Include="TransactionalStreamReader.cs" />
     <Compile Include="Rule.cs" />
     <Compile Include="Transaction.cs" />
+    <Compile Include="VariableExpression.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Modbus-serial.xml">
