--- a/ProtoEngineTest/ProtoEngineTest.csproj
+++ b/ProtoEngineTest/ProtoEngineTest.csproj
@@ -50,8 +50,11 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConstantExpressionTest.cs" />
     <Compile Include="ExpressionTest.cs" />
+    <Compile Include="FunctionCallExpressionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionalStreamReaderTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProtoEngine\ProtoEngine.csproj">
