--- a/ProtoEngineTest/ProtoEngineTest.csproj
+++ b/ProtoEngineTest/ProtoEngineTest.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ExpressionTest.cs" />
     <Compile Include="FunctionCallExpressionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProtocolTest.cs" />
     <Compile Include="TransactionalStreamReaderTest.cs" />
   </ItemGroup>
   <ItemGroup>
