--- a/ProtoEngineTest/ProtoEngineTest.csproj
+++ b/ProtoEngineTest/ProtoEngineTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="FunctionCallExpressionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtocolTest.cs" />
+    <Compile Include="RuleMatchTest.cs" />
     <Compile Include="TransactionalStreamReaderTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,6 +63,9 @@
       <Project>{B9B8EF07-BD51-4488-A254-F649E2093BAC}</Project>
       <Name>ProtoEngine</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Shadow Include="Test References\ProtoEngine.accessor" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
