--- a/ProtoEngineTest/ProtoEngineTest.csproj
+++ b/ProtoEngineTest/ProtoEngineTest.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtocolTest.cs" />
     <Compile Include="RuleMatchTest.cs" />
+    <Compile Include="RuleSetTest.cs" />
     <Compile Include="TransactionalStreamReaderTest.cs" />
   </ItemGroup>
   <ItemGroup>
