--- a/ProtoEngine/ProtoEngine.csproj
+++ b/ProtoEngine/ProtoEngine.csproj
@@ -53,8 +53,10 @@
     <Compile Include="OptionInt.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ramka.cs" />
     <Compile Include="RuleBlock.cs" />
     <Compile Include="RuleField.cs" />
+    <Compile Include="Slave.cs" />
     <Compile Include="TransactionalStreamReader.cs" />
     <Compile Include="Rule.cs" />
     <Compile Include="Transaction.cs" />
